--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 @import "./abstracts/theme.module";
 
@@ -24,7 +24,7 @@ body {
   margin: 0;
   padding: 0;
   // font-family: Arial, Helvetica, sans-serif;
-  font-family: "Roboto";
+  font-family: "Montserrat";
   background-color: var(--white) !important;
   overflow-x: hidden;
 }
@@ -431,7 +431,7 @@ input[type="submit"]:hover {
 // ==============================
 .MuiContainer-root {
   @media (min-width: 1200px) {
-    max-width: 1080px;
+    max-width: 1160px;
     padding: 0 10px;
   }
   &.cus_container {
